more consolidations and organizations